--- a/src/Views/pages/about.twig
+++ b/src/Views/pages/about.twig
@@ -75,13 +75,13 @@
             <div class="objetivos-content">
                 <div class="objetivo-principal">
                     <h3>Objetivo Geral</h3>
-                    <p>Desenvolver um Material Didático Digital (MDD) para o ensino de leitura acadêmica em uma perspectiva crítica-discursiva, baseado na Análise de Discurso Crítica (ADC).</p>
+                    <p>Compreender como a Análise de Discurso Crítica pode contribuir para o ensino língua portuguesa na educação básica. (ADC).</p>
                 </div>
                 <div class="objetivos-especificos">
                     <h3>Objetivos Específicos</h3>
                     <ul>
                         <li>Criar um repositório interativo para a publicação de Objetos Digitais de Aprendizagem;</li>
-                        <li>Disponibilizar Materiais Didáticos Digitais para professores e alunos;</li>
+                        <li>Disponibilizar Objetos "Digitais" de Aprendizagens para Professores de língua Portuguesa;</li>
                         <li>Desenvolver Projetos de letramento em perspectiva crítica;</li>
                         <li>Fortalecer a relação entre linguística e educação básica;</li>
                         <li>Promover o ensino e a aprendizagem com base em evidências científicas;</li>
@@ -106,11 +106,11 @@
                 </div>
                 <div class="fundamentacao-item">
                     <h3> Educação</h3>
-                    <p>Nos alicerçamos nos estudos de Falkembach (2005) sobre o processo de elaboração de material educacional digital, que leva em conta cinco etapas, quais sejam: 1. Análise e Planejamento; 2. Modelagem; 3. Implementação; 4. Avaliação e manutenção e 5. Distribuição.</p>
+                    <p>Consideramos a Educação como um “objeto de cultura” (Brandão, 1993), Dito isso, a ADC só pode adotar uma ideia de educação que não tem um fim instrumental, mercadológico ou utilitário, em que “a finalidade da educação é essencialmente o desenvolvimento humano” (Brandão, 1993, p. 110), que não se reduz à mera transmissão do saber, que é dialógica, dialética e crítica, portanto, assim como a ADC, ela rechaça o mito da neutralidade científica.</p>
                 </div>
                 <div class="fundamentacao-item">
                     <h3>Letramentos</h3>
-                    <p>Para construção do MDD iremos considerar os resultados da pesquisa de iniciação científica intitulada "Educação e Cyberespaço: o discurso sobre (a #) leitura no tiktok", realizada entre 2023-2024, buscando compartilhar e aplicar o que foi apreendido, a partir de um produto educacional digital.</p>
+                    <p>Gee (1990, p. 177, tradução nossa) discorre sobre a ‘virada social’ nos estudos de letramento e afirma que “esses movimentos argumentaram [...] para a importância do 'social', cada um com sua própria opinião sobre o que “social” deveria significar”. Sob esse prisma Street (2014, p. 19) define os letramentos como “uma abreviatura para práticas sociais de leitura e escrita” (Street, 2014, p. 19).</p>
                 </div>
             </div>
         </div>
@@ -552,7 +552,7 @@
     </div>
 
     <div class="nota-final">
-      <p><strong>Importante:</strong> Certifique-se de que o arquivo está completo e bem organizado. Em caso de dúvidas, entre em contato com nossa equipe através do e-mail <a href="mailto:contato@discursivamente.com.br">contato@discursivamente.com.br</a>.</p>
+      <p><strong>Importante:</strong> Certifique-se de que o arquivo está completo e bem organizado. Em caso de dúvidas, entre em contato com nossa equipe através do e-mail <a href="mailto:projeto.discursivamente@gmail.com.br">projeto.discursivamente@gmail.com.br</a>.</p>
     </div>
 
         <!-- BOTÃO ADICIONADO -->
